--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Antic+Slab|Bungee+Inline|Cinzel+Decorative|Julius+Sans+One|Pacifico&display=swap" rel="stylesheet">
     <title>Photobook</title>
   </head>
   <body>
