--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Antic+Slab|Bungee+Inline|Cinzel+Decorative|Julius+Sans+One|Pacifico&display=swap" rel="stylesheet">
-    
-    <title>Photobook</title>
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <title>Photobook by SW</title>
   </head>
   <body>
     <div id="root"></div>
